fix: downgrade to java 8